# safer-autonomous-infrastructure-robot

./: .gitignore  LICENSE  README.md  deploy.sh  hazard_classes.yaml  robot_params.yaml
firmware/arduino/: safer_actuator.ino
firmware/stm32/: main.c
simulation/: README.md
simulation/scenarios/: open_manhole_scenario.py
src/safer_actuation/: CMakeLists.txt  package.xml
src/safer_actuation/config/: actuation_params.yaml
src/safer_actuation/launch/: actuation.launch
src/safer_actuation/scripts/: actuation_manager_node.py  alert_peripheral_controller.py  brake_controller.py  motor_controller.py
src/safer_bringup/: CMakeLists.txt  package.xml
src/safer_bringup/config/: hazard_classes.yaml  robot_params.yaml
src/safer_bringup/launch/: safer_robot.launch  safer_simulation.launch
src/safer_bringup/urdf/: safer_robot.urdf.xacro
src/safer_comms/: CMakeLists.txt  package.xml
src/safer_comms/config/: comms_params.yaml
src/safer_comms/launch/: alert_bridge.launch
src/safer_comms/scripts/: dashboard_publisher.py  mqtt_alert_bridge.py
src/safer_decision/: CMakeLists.txt  README.md  package.xml
src/safer_decision/config/: risk_thresholds.yaml
src/safer_decision/launch/: risk_planner.launch
src/safer_decision/scripts/: mode_fsm.py  risk_planner_node.py  risk_scorer.py
src/safer_msgs/: CMakeLists.txt  package.xml
src/safer_msgs/action/: MitigateHazard.action
src/safer_msgs/msg/: ActuatorCommand.msg  AlertPayload.msg  HazardDetection.msg  ModeCommand.msg  ModeStatus.msg  RiskAssessment.msg
src/safer_msgs/srv/: ClassifyHazard.srv  GetRiskScore.srv  TriggerMitigation.srv
src/safer_navigation/: CMakeLists.txt  package.xml
src/safer_navigation/config/: costmap_common.yaml  mpc_params.yaml  patrol_params.yaml
src/safer_navigation/launch/: autonomous_nav.launch
src/safer_navigation/scripts/: costmap_hazard_layer.py  mpc_trajectory_tracker.py  patrol_controller.py
src/safer_perception/: CMakeLists.txt  README.md  package.xml
src/safer_perception/config/: perception_params.yaml
src/safer_perception/include/safer_perception/: depth_processor.h  ultrasonic_filter.h
src/safer_perception/launch/: hazard_detection.launch
src/safer_perception/scripts/: hazard_classifier.py  pedestrian_density_estimator.py
src/safer_perception/src/: depth_processor.cpp  hazard_detector_node.cpp  ultrasonic_filter.cpp
