<?xml version="1.0"?>
<package format="2">
  <n>safer_comms</n>
  <version>0.1.0</version>
  <description>
    External communications for the SAFER robot.
    MQTT alert bridge and REST dashboard publisher.
  </description>

  <maintainer email="safer@robot.local">SAFER Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>safer_msgs</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export></export>
</package>
