<?xml version="1.0"?>
<package format="2">
  <name>safer_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS messages, services, and actions for the SAFER robot.</description>

  <maintainer email="safer@robot.local">SAFER Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>action_msgs</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export></export>
</package>
