<?xml version="1.0"?>
<package format="2">
  <n>safer_navigation</n>
  <version>0.1.0</version>
  <description>
    Autonomous navigation for the SAFER robot.
    Patrol controller, MPC trajectory tracker, and hazard-aware costmap layer.
  </description>

  <maintainer email="safer@robot.local">SAFER Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>safer_msgs</depend>
  <depend>tf2_ros</depend>

  <export></export>
</package>
