<?xml version="1.0"?>
<package format="2">
  <n>safer_perception</n>
  <version>0.1.0</version>
  <description>
    Sensor fusion and hazard detection for the SAFER robot.
    Combines depth camera, ultrasonic, and ML-based classification
    to produce HazardDetection messages.
  </description>

  <maintainer email="safer@robot.local">SAFER Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>safer_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export></export>
</package>
